[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "afini-twin-sdk"
version = "0.1.0"
description = "Official Python SDK for the AfiniTwin B2B API."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Bilbao AI S.L.", email = "info@afini.ai" }]
keywords = [
  "afini",
  "afinitwin",
  "personality",
  "big-five",
  "ipip-neo",
  "cognitive-profile",
  "ai",
  "llm",
  "system-prompt",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.5",
]

[project.urls]
Homepage = "https://afini.ai/afinitwin/api"
Documentation = "https://afini.ai/afinitwin/api"
Repository = "https://github.com/ricardodevis/afini-twin-sdk-py"
Issues = "https://github.com/ricardodevis/afini-twin-sdk-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["afini_twin"]
